# ensembl-dauphin-style-compiler

./: .env.sample  .gitignore  .gitlab-ci.yml  CHANGELOG.md  VERSIONS.md  docker-compose.yml  peregrine.code-workspace  readme.md  test.sh
commander/: Cargo.toml
commander/src/: lib.rs
commander/src/agent/: agent.rs  finishagent.rs  nameagent.rs  runagent.rs  taskrun.rs
commander/src/corefutures/: namedfuture.rs  promisefuture.rs  tidierfuture.rs
commander/src/derivedfutures/: commanderstream.rs  fuse.rs  sendfuse.rs
commander/src/executor/: executor.rs  exetasks.rs  link.rs  lock.rs  request.rs  runnable.rs  runqueue.rs  taskcontainer.rs  taskcontainerhandle.rs  timerset.rs  timings.rs
commander/src/integration/: integration.rs  reentering.rs  sleepcatcher.rs  testintegration.rs
commander/src/task/: block.rs  faketask.rs  runconfig.rs  slot.rs  task.rs  taskhandle.rs
dauphin/: Cargo.toml  stick.begs
dauphin-compile/: Cargo.toml
dauphin-compile/src/cli/: config.rs
dauphin-compile/src/command/: command.rs  compilelink.rs  compilesuite.rs  complibregister.rs  instruction.rs  mergelink.rs  metadata.rs  metadatabuilder.rs  metalink.rs  mod.rs  opcoderemapper.rs  timetrial.rs
dauphin-compile/src/core/: commontype.rs  consts.rs  core.rs
dauphin-compile/src/generate/: call.rs  codegen.rs  compilerun.rs  gencontext.rs  generate.rs  linearize.rs  mod.rs  pauses.rs  peephole.rs  retreat.rs  reuseregs.rs  simplify.rs  state.rs  useearliest.rs
dauphin-compile/src/lexer/: charsource.rs  filelexer.rs  getting.rs  inlinecheck.rs  inlinetokens.rs  lexer.rs  token.rs
dauphin-compile/src/model/: definition.rs  definitionstore.rs  identifierstore.rs  preimage.rs  regalloc.rs  signature.rs  structenum.rs
dauphin-compile/src/parser/: declare.rs  lexutil.rs  mod.rs  node.rs  parsedecl.rs  parseexpr.rs  parser.rs  parsestmt.rs
dauphin-compile/src/resolver/: common.rs  core.rs  file.rs  preamble.rs  resolvefile.rs  search.rs
dauphin-compile/src/test/: commands.rs  compile.rs  mod.rs
dauphin-compile/src/typeinf/: constraints.rs  typemodel.rs  types.rs  typestore.rs  typing.rs
dauphin-compile/src/util/: dfloat.rs  fileutil.rs  mod.rs  vectorcopy.rs
dauphin-compile/testdata/codegen/: generate-smoke2.egs  generate-smoke2.out  linearize-refsquare.dp  linearize-smoke-reffilter.egs  lvalue.dp  runnums.dp  std.dp
dauphin-compile/testdata/interp/: cbor-signature-named.out  cbor-signature-unnamed.out  compilesuite.out
dauphin-compile/testdata/lexer/: operator.out  smoke.out  smoke2.out
dauphin-compile/testdata/parser/: import-smoke.egs  parser-smoke.dp  parser-smoke.out
dauphin-interp/: Cargo.toml
dauphin-interp/src/: lib.rs
dauphin-interp/src/api/: dauphin.rs  mod.rs
dauphin-interp/src/command/: binary.rs  command.rs  commandsetid.rs  deserializer.rs  interplibregister.rs  interplink.rs  interpretsuite.rs  metadata.rs  misc.rs  mod.rs  opcodemapping.rs
dauphin-interp/src/core/: consts.rs  core.rs
dauphin-interp/src/runtime/: context.rs  interpret.rs  mod.rs  register.rs  registers.rs  supercow.rs  value.rs
dauphin-interp/src/stream/: mod.rs  stream.rs
dauphin-lib-peregrine/: Cargo.toml
dauphin-lib-peregrine/src/: lib.rs  payload.rs  util.rs
dauphin-lib-std/: Cargo.toml
dauphin-lib-std/src/: lib.rs
dauphin-test-harness/: Cargo.toml
dauphin-test-harness/src/: cbor.rs  commands.rs  compile.rs  config.rs  lib.rs
dauphin/src/: main.rs  suitebuilder.rs
dauphin/wip/: demo.dp  demo2.dp  stickauthority.dp
earp-assembler-lib/: Cargo.toml
earp-assembler-lib/src/: assemble.rs  assets.rs  command.rs  earpfile.rs  fileloader.rs  instructionset.rs  lib.rs  lookup.rs  opcodemap.pest  opcodemap.rs  parser.rs  serialize.rs  setmapper.rs  suite.rs
earp-runtime-test/: Cargo.toml
earp-runtime-test/src/: earpfilereader.rs  lib.rs  testcommands.rs  testutil.rs
febe-javascript/: Cargo.toml
febe-javascript/src/: backend.rs  callbacks.rs  channel.rs  datares.rs  integration.rs  jsutil.rs  lib.rs  payloadextract.rs  sidecars.rs
febe-network/: Cargo.toml
febe-network/src/: ajax.rs  cborserial.rs  lib.rs  networkchannel.rs
libperegrine/: Cargo.toml
libperegrine/src/: context.rs  coord.rs  data.rs  leaf.rs  lib.rs  paint.rs  setting.rs  shape.rs  style.rs  util.rs
peregrine-core/: Cargo.toml
peregrine-core/src/: lib.rs
peregrine-data/: Cargo.toml
peregrine-data/src/: lib.rs
peregrine-dauphin/: Cargo.toml
peregrine-dauphin-queue/: Cargo.toml
peregrine-dauphin-queue/src/: lib.rs
peregrine-dauphin/src/: lib.rs
peregrine-draw/: Cargo.toml  build.rs  index.html  style.css
peregrine-draw/src/: lib.rs
peregrine-ensembl/: .peregrine-ci.yml  BUILDING.md  Cargo.toml  Dockerfile  Dockerfile-buildkit  Dockerfile-buildkit.dockerignore  Dockerfile-wasmpack  README.md  build-docker-local.sh  build-menu.json  build-wasmpack.sh  build.sh  buildkit-menu.json  index-nomodule.html  index.html  style.css
peregrine-ensembl/docs/: switches.md  transcript-selection.md
peregrine-ensembl/publish/: README.md  package-lock.json  package.json  rollup.config.js
peregrine-ensembl/src/: lib.rs  standalonedom.rs
peregrine-generic/: .build.sh.swp  Cargo.toml  Dockerfile  build-menu.json  build.sh  imran.html  index.html  regulation.html  script.js  server.py  style.css  test-expansion.js  unmangle.py  variation.html
peregrine-generic/src/: lib.rs  standalonedom.rs
peregrine-standalone/: Cargo.toml  build.sh  index.html  style.css
peregrine-standalone/js/: communication.js  communication.ts
peregrine-standalone/src/: error.rs  lib.rs  pgblackbox.rs  pgconsole.rs  standalonedom.rs
peregrine-toolkit/: Cargo.toml
peregrine-toolkit-async/: Cargo.toml
peregrine-toolkit-async/src/: lib.rs
peregrine-toolkit/src/: approxnumber.rs  boom.rs  cbor.rs  console.rs  diffset.rs  error.rs  identitynumber.rs  itertools.rs  lang.rs  lesqlite2.rs  lib.rs  rate.rs  refs.rs  sample.rs  serde.rs  serdetools.rs  skyline.rs  time.rs  url.rs  watermark.md  watermark.rs
peregrine-web/: .build.sh.swp  Cargo.toml  build.sh  index.html
peregrine-web/src/: lib.rs
(+1744 files in other folders)
