[package]
name = "commander"
edition = '2018'
version = "0.0.1"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]

[dependencies]
hashbrown="*"
futures="^0.3.4"
owning_ref="*"
binary-heap-plus="*"
ordered-float = "*"
lazy_static="*"

[dependencies.blackbox]
version="*"
path="../blackbox"

[dependencies.identitynumber]
version="0.0.0"
path="../identitynumber"
