[package]
name = "dauphin_compile"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

[dependencies]
anyhow="*"
clap = "*"
hex = ">=0.3.2"
lazy_static = ">=1.3.0"
owning_ref="*"
serde_cbor="*"
crc="*"
regex="*"
chrono="*"
users="*"
futures="*"

dauphin_interp = { path = "../dauphin-interp" }

[dev-dependencies]
dauphin_lib_std = { path = "../dauphin-lib-std", features=["compile"] }
dauphin_test_harness = { path = "../dauphin-test-harness" }

#[profile.test]
#opt-level = 3
