[package]
name = "dauphin_interp"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor="*"
lazy_static="*"
thiserror=">=1.0"
anyhow="*"
peregrine_toolkit={ version="*", path="../peregrine-toolkit" }

[dev-dependencies]
dauphin_compile = { path = "../dauphin-compile" }
dauphin_lib_std = { path = "../dauphin-lib-std", features = ["compile"] }
dauphin_test_harness = { path = "../dauphin-test-harness" }
