[package]
name = "dauphin_lib_peregrine"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

[features]
compile = ["dauphin_compile"]

[dependencies]
anyhow="*"
serde_cbor="*"
serde_json="*"
url="*"
owning_ref="*"
inflate="*"

dauphin_interp = { path = "../dauphin-interp" }
dauphin_compile = { path = "../dauphin-compile", optional = true }
peregrine_toolkit = { path = "../peregrine-toolkit" }

[dev-dependencies]
dauphin_compile = { path = "../dauphin-compile" }
dauphin_test_harness = { path = "../dauphin-test-harness" }

[dependencies.peregrine_data]
version="*"
path="../peregrine-data"

[dependencies.web-sys]
version="*"
features=["console"]
