[package]
name = "dauphin_lib_std"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
compile = ["dauphin_compile"]

[dependencies]
hashbrown = "*"
serde_cbor = "*"
anyhow="*"
dauphin_interp = { path = "../dauphin-interp" }
dauphin_compile = { path = "../dauphin-compile", optional = true }
web-sys={ version="*", features = ["console"] }
peregrine_toolkit = { path = "../peregrine-toolkit" }

[dev-dependencies]
dauphin_compile = { path = "../dauphin-compile" }
dauphin_test_harness = { path = "../dauphin-test-harness" }
