[package]
name = "dauphin_test_harness"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
futures = "*"
serde_cbor = "*"
dauphin_compile = { path = "../dauphin-compile" }
dauphin_interp = { path = "../dauphin-interp" }
