[package]
name = "peregrine_core"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="*"
async-trait="*"
owning_ref="*"
serde_cbor="*"
url="*"
futures="*"

[dependencies.blackbox]
version="*"
path="../blackbox"

[dependencies.varea]
version="*"
path="../varea"

[dependencies.commander]
version="*"
path="../commander"

[dependencies.dauphin_interp]
version="*"
path="../dauphin-interp"

[dependencies.dauphin_lib_std]
version="*"
path="../dauphin-lib-std"
