[package]
name = "peregrine_core"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="*"
async-trait="*"
owning_ref="*"
serde_cbor="*"
serde_json="*"
url="*"
futures="*"
regex="*"

[dependencies.blackbox]
version="*"
path="../blackbox"

[dependencies.varea]
version="*"
path="../varea"

[dependencies.commander]
version="*"
path="../commander"

[dependencies.peregrine_dauphin_queue]
version="*"
path="../peregrine-dauphin-queue"

[dependencies.dauphin_interp]
version="*"
path="../dauphin-interp"

[dependencies.web-sys]
version="*"
features=["console"]
