[package]
name = "peregrine_data"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="*"
async-trait="*"
owning_ref="*"
serde_cbor="*"
serde_json="*"
url="*"
futures="*"
regex="*"
lazy_static="*"
# ouroboros="*"

[dependencies.keyed]
version="*"
path="../keyed"

[dependencies.commander]
version="*"
path="../commander"

[dependencies.peregrine_dauphin_queue]
version="*"
path="../peregrine-dauphin-queue"

[dependencies.peregrine_message]
version="*"
path="../peregrine-message"

[dependencies.peregrine_config]
version="*"
path="../peregrine-config"

[dependencies.dauphin_interp]
version="*"
path="../dauphin-interp"

# XXX
[dependencies.web-sys]
version="*"
features=["console"]

[dependencies.js-sys]
version="*"

[dependencies.identitynumber]
version="*"
path="../identitynumber"
