[package]
name = "peregrine_dauphin_queue"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="*"
serde_cbor="*"

[dependencies.commander]
version="*"
path="../commander"

[dependencies.peregrine_toolkit]
version="*"
path="../peregrine-toolkit"

[dependencies.eard-interp]
version="*"
path="../../eard/interp"
