[package]
name = "peregrine_draw"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[dependencies]
anyhow="*"
owning_ref="*"
wasm-bindgen-futures = "*"
lazy_static = "*"
serde_cbor="*"
once_cell="*"
serde_json="*"
fnv="*"
base64="*"
async-trait="*"
url="*"
console_error_panic_hook="*"
css-color-parser="*"

[dependencies.wasm-bindgen]
version="*"
features = [
  'serde-serialize'
]

[dependencies.commander]
version="*"
path="../commander"

[dependencies.peregrine_message]
version="*"
path="../peregrine-message"

[dependencies.peregrine_toolkit]
version="*"
path="../peregrine-toolkit"

[dependencies.web-sys]
version = "*"
features = [
  'AbortController', 'AbortSignal',
  'console', 'CustomEvent', 'CustomEventInit', 'CanvasRenderingContext2d', 'CssStyleDeclaration',
  'Document', 'DomRect',
  'Element',
  'HtmlElement', 'Headers', 'HtmlCanvasElement', 'HtmlCollection',
  'KeyboardEvent',
  'MouseEvent',
  'Node',
  'PointerEvent',
  'Request', 'RequestInit', 'RequestMode', 'Response',
  'Screen',
  'TextMetrics',
  'Window', 'WebGlRenderingContext', 'WebGlShaderPrecisionFormat', 'WebGlProgram', 'WebGlShader',
  'WebGlUniformLocation', 'WebGlBuffer', 'WebGlTexture', 'WheelEvent',
  'XmlHttpRequest', 'XmlHttpRequestResponseType'
]

[dependencies.js-sys]
version = "^0.3.51"

[dependencies.dauphin_interp]
version="*"
path="../dauphin-interp"

[dependencies.keyed]
version="*"
path="../keyed"

[dependencies.peregrine_data]
version="*"
path="../peregrine-data"

[dependencies.peregrine_dauphin_queue]
version="*"
path="../peregrine-dauphin-queue"

[dependencies.peregrine_dauphin]
version="*"
path="../peregrine-dauphin"

[dependencies.peregrine_config]
version="*"
path="../peregrine-config"
