[package]
name = "peregrine_draw"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[build]
build="build.rs"

[build-dependencies]
chrono="*"
hostname="*"

[dependencies]
anyhow="*"
wasm-bindgen-futures = "*"
lazy_static = "*"
serde_cbor="*"
serde_json="*"
base64="*"
url="*"
console_error_panic_hook="*"
css-color-parser="*"
enum-iterator="*"

[dependencies.wasm-bindgen]
version="*"
features = [
  'serde-serialize'
]

[dependencies.commander]
version="*"
path="../commander"

[dependencies.peregrine_message]
version="*"
path="../peregrine-message"

[dependencies.peregrine_toolkit]
version="*"
path="../peregrine-toolkit"

[dependencies.peregrine_toolkit_async]
version="*"
path="../peregrine-toolkit-async"

[dependencies.eachorevery]
version="*"
path="../../peregrine-eachorevery"

[dependencies.web-sys]
version = "*"
features = [
  'AudioContext', 'AudioBufferSourceNode', 'AudioBuffer', 'AudioDestinationNode', 'AudioParam', 'AudioContextState',
  'console', 'CustomEvent', 'CustomEventInit', 'CanvasRenderingContext2d', 'CssStyleDeclaration', 'Crypto',
  'Document', 'DomRect',
  'Element',
  'FontFaceSet',
  'GainNode',
  'HtmlElement', 'HtmlCanvasElement', 'HtmlCollection', 'HtmlImageElement',
  'KeyboardEvent',
  'MouseEvent',
  'Node',
  'PointerEvent',
  'Screen',
  'TextMetrics',
  'Window', 'WebGlRenderingContext', 'WebGlShaderPrecisionFormat', 'WebGlProgram', 'WebGlShader',
  'WebGlUniformLocation', 'WebGlBuffer', 'WebGlTexture', 'WheelEvent',
  'XmlHttpRequest', 'XmlHttpRequestResponseType'
]

[dependencies.js-sys]
version = "^0.3.51"

[dependencies.peregrine_febe_network]
version="*"
path="../febe-network"

[dependencies.peregrine_febe_javascript]
version="*"
path="../febe-javascript"

[dependencies.keyed]
version="*"
path="../keyed"

[dependencies.peregrine_data]
version="*"
path="../peregrine-data"

[dependencies.peregrine_dauphin_queue]
version="*"
path="../peregrine-dauphin-queue"

[dependencies.peregrine_dauphin]
version="*"
path="../peregrine-dauphin"

[dependencies.peregrine_config]
version="*"
path="../peregrine-config"
