[package]
name = "peregrine-generic"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow="*"
wasm-bindgen-futures = "*"
console_error_panic_hook="*"
url="*"
lazy_static="*"
serde={ version="*", features=["derive"] }
serde_json="*"

[dependencies.commander]
version="*"
path="../commander"

[dependencies.wasm-bindgen]
version="*"
features = [
  'serde-serialize'
]

[dependencies.js-sys]
version = "*"

[dependencies.web-sys]
version = "*"
features=["CssStyleDeclaration","HtmlElement","DomTokenList"]

[dependencies.peregrine_data]
version="*"
path="../peregrine-data"

[dependencies.peregrine_draw]
version="*"
path="../peregrine-draw"

[dependencies.peregrine_toolkit]
version="*"
path="../peregrine-toolkit"

[dependencies.peregrine_message]
version="*"
path="../peregrine-message"

[profile.release]
lto=true
