[package]
name = "peregrine-standalone"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow="*"
wasm-bindgen-futures = "*"
console_error_panic_hook="*"
url="*"
lazy_static= "1.4.0"
serde_json = "1.0.64"

[dependencies.commander]
version="*"
path="../commander"

[dependencies.wasm-bindgen]
version="*"
features = [
  'serde-serialize'
]

[dependencies.js-sys]
version = "*"

[dependencies.web-sys]
version = "*"

[dependencies.peregrine_data]
version="*"
path="../peregrine-data"

[dependencies.peregrine_draw]
version="*"
path="../peregrine-draw"

[dependencies.peregrine_message]
version="*"
path="../peregrine-message"
