[package]
name = "peregrine_toolkit_async"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[dependencies]
js-sys="*"
wasm-bindgen=">=0.2.77"

[dependencies.commander]
version="*"
path="../commander"

[dependencies.peregrine_toolkit]
version="*"
path="../peregrine-toolkit"
