[package]
name = "peregrine_toolkit"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[dependencies]
anyhow="*"
js-sys="*"
wasm-bindgen="*"
serde="*"
serde_cbor="*"
serde_json="*"
serde_derive="*"
lazy_static="*"
hashbrown="*"

[dependencies.identitynumber]
version="*"
path="../identitynumber"


[dependencies.web-sys]
version="*"
features=["console","Performance","Window"]
