[package]
name = "peregrine_toolkit"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[dependencies]
anyhow="*"
js-sys="*"
wasm-bindgen=">=0.2.77"
serde="*"
serde_cbor="*"
serde_json="*"
serde_derive="*"
lazy_static="*"
hashbrown="*"

[dependencies.identitynumber]
version="*"
path="../identitynumber"


[dependencies.web-sys]
version="*"
features=[
    "console", "CssStyleDeclaration",
    "Document",
    "HtmlElement", "HtmlCanvasElement", "HtmlCollection",
    "Performance",
    "Window"
]
