[package]
name = "peregrine-web"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow="*"
owning_ref="*"
wasm-bindgen-futures = "*"
lazy_static = "*"
serde_cbor="*"
once_cell="*"
serde_json="*"
fnv="*"
base64="*"

[dependencies.wasm-bindgen]
version="*"
features = [
  'serde-serialize'
]

[dependencies.blackbox]
version="*"
path="../blackbox"
features=[]

[dependencies.commander]
version="*"
path="../commander"

[dependencies.dauphin_interp]
version="*"
path="../dauphin-interp"

[dependencies.dauphin_lib_std]
version="*"
path="../dauphin-lib-std"

[dependencies.web-sys]
version = "*"
features = [
  'console', 'CustomEvent', 'CustomEventInit',
  'Document',
  'Element',
  'HtmlElement', 'Headers',
  'Node',
  'Request', 'RequestInit', 'RequestMode', 'Response',
  'Window',
  'XmlHttpRequest', 'XmlHttpRequestResponseType'
]

[dependencies.js-sys]
version = "*"
